--- a/web-app/.gitignore
+++ b/web-app/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # next.js
-/.next/
+/.next
 /out/
 
 # production
@@ -32,4 +32,4 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+#next-env.d.ts
